tenzir/tests/exec/operators/strict.tql
// error
from {}
strict { assert false }
